reface DAG plan https://github.com/datavane/tis/issues/486